<resources>
    <string name="fa_icon_google_plus" translatable="false">&#xf2b3;</string>
    <string name="fa_icon_fbs" translatable="false">&#xf09a;</string>
    <string name="fa_icon_linkedin" translatable="false">&#xf08c;</string>
    <string name="fa_icon_twitter" translatable="false">&#xf099;</string>
    <string name="fa_icon_instagram" translatable="false">&#xf16d;</string>
    <string name="fa_icon_vk" translatable="false">&#xf189;</string>
    <string name="fa_icon_youtube" translatable="false">&#xf167;</string>
    <string name="fa_icon_telegram" translatable="false">&#xf2c6;</string>
    <string name="fa_icon_git" translatable="false">&#xf1d3;</string>
    <string name="fa_share_icon" translatable="false">&#xf064;</string>
    <string name="fa_back_arrow" translatable="false">&#xf104;</string>
    <string name="app_name">DAO PlayMarket 2.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="playmarket">DAO PLAYMARKET 2.0</string>
    <string name="activity_permission_msg">For DAO PlayMarket 2.0 to work on your version of Android, we need permission to save files on your phone.\n\nThis is only used for saving your wallet info and installers for purchased apps.</string>
    <string name="got_it_btn">Got it!</string>
    <string name="import_successful">Import Successful!</string>
    <string name="address_copied">Address Copied!</string>
    <string name="bytecode_copied">Bytecode Copied!</string>
    <string name="search">SEARCH</string>
    <string name="error_view_msg">There was a problem connecting to the server. Please try again.</string>
    <string name="error_btn_msg">Try again</string>
    <string name="download_msg">Downloading...</string>
    <string name="exchange">Deposit</string>
    <string name="wishlist">Wishlist</string>
    <string name="library">Library</string>
    <string name="news">News</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="ether_exchange">Ether exchange</string>
    <string name="my_ico">My STO</string>
    <string name="about">About</string>
    <string name="welcome">Welcome!\nDid you use our application before?</string>
    <string name="new_account_button">Create account</string>
    <string name="import_account_button"><u>Import account</u></string>
    <string name="congratulations_title">Congratulations, a new user is created!</string>
    <string name="save_key_title">Please, don\'t forget to save your personal account key for user data transfer to other devices.</string>
    <string name="save">Save</string>
    <string name="continue_btn">Continue</string>
    <string name="configure_fingerprint">Configure fingerprint</string>
    <string name="found_json_keystore">A JSON Keystore File is found</string>
    <string name="import_message">We found a JSON Keystore File on your device. If you want, you can select one of them and import it.</string>
    <string name="import_button">Import</string>
    <string name="chose_folder">Select a folder to save the JSON File</string>
    <string name="chose_file">Select a JSON File to import</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_password_first">Enter your account password first</string>
    <string name="enter_folder_name">Enter folder name</string>
    <string name="empty_password">Password field can not be empty</string>
    <string name="empty_field">This field can not be empty</string>
    <string name="insufficient_funds">You don\'t have the required amount</string>
    <string name="short_password">Password cannot be less than 7 characters</string>
    <string name="short_account">Account cannot be less than 42 characters</string>
    <string name="create_folder">Create new folder</string>
    <string name="success_autosave_message">Copy of the JSON Keystore File is successfully saved in the directory /PlayMarket2.0/Accounts/"</string>
    <string name="failed_autosave_message">"JSON Keystore File" auto save failed"</string>
    <string name="success_save_message">Copy of the JSON Keystore File is successfully saved</string>
    <string name="failed_save_message">"JSON Keystore File" save failed"</string>
    <string name="transaction_success">"Transaction success"</string>
    <string name="btn_install">install</string>
    <string name="btn_download">Download</string>
    <string name="btn_open">Open</string>
    <string name="btn_invest">Invest</string>
    <string name="delete_with_underscore"><u>Delete</u></string>
    <string name="app_free">FREE</string>
    <string name="dialog_app_purchase_body">To confirm your purchase, press continue below.</string>
    <string name="not_enought_balance">Not enough balance</string>
    <string name="cancel_btn">Cancel</string>
    <string name="password">Password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="no_items">No items</string>
    <string name="recycler_empty_view">No items found!</string>
    <string name="successfully_paid">Successfully paid</string>
    <string name="setting_autoinstall">Automatically install/update applications after downloading.</string>
    <string name="settings_title">Settings</string>
    <string name="library_screen_title">My apps</string>
    <string name="double_tap_msg">Press back again to quit.</string>
    <string name="continue_without_location">Continue without location</string>
    <string name="account">Account</string>
    <string name="back">Back</string>
    <string name="invest_btn_text">Invest</string>
    <string name="wrong_invest_amout">Wrong amount!</string>
    <string name="network_status_location_search">Search user location...</string>
    <string name="network_status_node_search">Search for the nearest node</string>
    <string name="todo">TODO</string>
    <string name="confirm_button">Confirm</string>
    <string name="nav_view_transfer">Transfer</string>
    <string name="ethereum_name">ETH</string>
    <string name="performing_action">For performing this action, a password is required. Please enter it below.</string>
    <string name="recipient_address">Recipient address:</string>
    <string name="recipient_address_field">Recipient address:</string>
    <string name="amount">Send amount:</string>
    <string name="wei">WEI</string>
    <string name="eth">ETH</string>
    <string name="send_info">Your send amount:</string>
    <string name="your_address">From your ETH address:</string>
    <string name="to">To recipient address:</string>
    <string name="your_eth_address">Your ETH Address</string>
    <string name="current_balance">Current balance</string>
    <string name="below_minimum_amount_error">Please enter the amount above the minimum</string>
    <string name="exchange_source">Select the source of the deposit:</string>
    <string name="send_amount">Send amount:\n(Minimum amount: %1$s)</string>
    <string name="transaction_details">transaction details:</string>
    <string name="exchange_details_currency">Exchange %1$s to ETH</string>
    <string name="exchange_details_amount">%1$s %2$s >> %3$s %4$s</string>
    <string name="exchange_details_fee">* fee included (0.5%)</string>
    <string name="exchange_confirm_transaction">To complete the transaction, make a transfer of %1$s %2$s to the account:</string>
    <string name="transfer_confirm_transaction">To complete transaction input your password:</string>
    <string name="exchange_step_field">Step %1$s of 2</string>
    <string name="load_failed">Load failed</string>
    <string name="another_exchange">Another exchange</string>
    <string name="search_for_node_fail">Search for the nearest node fail. Tap for more details\</string>
    <string name="press_sensor">Press the sensor</string>
    <string name="about_activate">Touch the fingerprint scanner to activate the fingerprint authentication</string>
    <string name="do_not_activate">Do not activate</string>
    <string name="press_sensor_to_complete">Press your sensor \nto complete transaction</string>
    <string name="use_password">Use password</string>
    <string name="is_available">You can use fingerprint \nauthentication</string>
    <string name="is_not_configured">Fingerprint supported \nbut not configured for device</string>
    <string name="configure_button">Configure fingerprint?</string>
    <string name="fingerprint_success">Password successfully encrypted!</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized, try again!</string>
    <string name="invest_earned_message">Earned, </string>
    <string name="invest_hardcap">HardCap</string>
    <string name="fragment_ico_title">STO</string>
    <string name="tokens_bought">Tokens bought</string>
    <string name="more">more</string>
    <string name="read_less">less</string>
    <string name="my_apps_fragment_title">My Apps</string>
    <string name="my_apps_update_fragment_title">Updates</string>
    <string name="reply">Reply</string>
    <string name="reply_hide">Hide</string>
    <string name="send">Send</string>
    <string name="successfully_review_send">Review successfully created!</string>
    <string name="update">Update</string>
    <string name="no_marks">No marks</string>
    <string name="age">Age</string>
    <string name="enter_password_to_proceed">Enter password to proceed.</string>
    <string name="review_dialog_title">Enter password to proceed.</string>
    <string name="or_user_your_fingerprint">Or use your fingerprint</string>
    <string name="open_app_info">to app</string>
    <string name="your_balance_is">Your balance:\n%1$s  ETH</string>
    <string name="balance_field_with_eth">%1$s ETH</string>
    <string name="send_message">Send message</string>
    <string name="read_more">Read more</string>
    <string name="my_apps">My applications</string>
    <string name="update_all_apps">Update all</string>
    <string name="has_update">Has update</string>
    <string name="my_apps_update_snackbar_text">%1$d/%2$d apps selected.</string>
    <string name="chosed">Chosed</string>
    <string name="transfer_tokens">Transfer tokens</string>
    <string name="uninstall">Uninstall</string>
    <string name="about_playmarket_2_0">© %1$d DAO PlayMarket 2.0</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="investment_declaration">Investment declaration</string>
    <string name="organizational_structure">Organizational structure</string>
    <string name="browser_version">Browser version</string>
    <string name="our_site">Platform site</string>
    <string name="ver">ver.</string>
    <string name="transaction_history_title">Transactions</string>
    <string name="no_items_found">No items found!</string>
    <string name="status">Status:</string>
    <string name="hash">Hash:</string>
    <string name="details">Details</string>
    <string name="ico_app_name">Name:</string>
    <string name="ico_token">CryptoDuel Token</string>
    <string name="ico_ticker">Ticker:</string>
    <string name="ico_cdlt">CDLT</string>
    <string name="ico_token_type">Token type</string>
    <string name="ico_token_name_security">Security</string>
    <string name="ico_dividends">Dividends:</string>
    <string name="ico_dividens_length">Every 30 days</string>
    <string name="ico_dividends_valute">Dividend currency</string>
    <string name="ico_valute_eth">ETH</string>
    <string name="token_funds">Proceeds from the sale of tokens:</string>
    <string name="ico_attracting_new_users">New users acquisition</string>
    <string name="wallet">Wallet</string>
    <string name="dividends">Dividends</string>
    <string name="votes">Votes</string>
</resources>