<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ico_bg"
    android:paddingLeft="30dp"
    android:paddingTop="60dp">

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/ico_mask_group" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/icoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ico_app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:text="@string/ico_token"
            android:textSize="16sp" />

        <TextView
            style="@style/icoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ico_ticker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:text="@string/ico_cdlt"
            android:textSize="16sp" />

        <TextView
            style="@style/icoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ico_token_type" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:text="@string/ico_token_name_security"
            android:textSize="16sp" />

        <TextView
            style="@style/icoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ico_dividends" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:text="@string/ico_dividens_length"
            android:textSize="16sp" />

        <TextView
            style="@style/icoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ico_dividends_valute" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:text="@string/ico_valute_eth"
            android:textSize="16sp" />

        <TextView
            style="@style/icoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/token_funds" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:text="@string/ico_attracting_new_users"
            android:textSize="16sp" />

    </LinearLayout>


</FrameLayout>