<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transaction_holder"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/exchangeGrayText"
        android:text="@string/transaction_details"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/exchange_details_currency"
        style="@style/exchangeGrayText"
        android:text="@string/exchange_details_currency" />

    <TextView
        android:id="@+id/exchange_details_amount"
        style="@style/exchangeGrayText"
        android:text="@string/exchange_details_amount"
        tools:visibility="visible"
        tools:text="150 btc >> 1939.0527 ETH"
        android:visibility="gone" />

    <TextView
        android:id="@+id/exchange_details_fee"
        android:visibility="gone"
        style="@style/exchangeGrayText"
        android:text="@string/exchange_details_fee" />
</merge>