<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/library_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/nav_drawer_menu_height"
        android:layout_marginBottom="@dimen/navigation_view_indents"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            style="@style/navViewImageItem"
            android:src="@drawable/ic_myappsicon" />

        <TextView
            style="@style/navViewTextItem"
            android:gravity="center_vertical"
            android:text="@string/library_screen_title" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/wallet_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/nav_drawer_menu_height"
        android:layout_marginBottom="@dimen/navigation_view_indents"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            style="@style/navViewImageItem"
            android:src="@drawable/ic_depositicon" />

        <TextView
            style="@style/navViewTextItem"
            android:gravity="center_vertical"
            android:text="@string/wallet" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dividends_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/nav_drawer_menu_height"
        android:layout_marginBottom="@dimen/navigation_view_indents"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            style="@style/navViewImageItem"
            android:src="@drawable/ic_tokensicon" />

        <TextView
            style="@style/navViewTextItem"
            android:text="@string/dividends" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/votes_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/nav_drawer_menu_height"
        android:layout_marginBottom="@dimen/navigation_view_indents"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            style="@style/navViewImageItem"
            android:src="@drawable/ic_myicoicon" />

        <TextView
            style="@style/navViewTextItem"
            android:text="@string/votes" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/nav_drawer_menu_height"
        android:layout_marginBottom="@dimen/navigation_view_indents"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            style="@style/navViewImageItem"
            android:src="@drawable/ic_settingsicon" />

        <TextView
            style="@style/navViewTextItem"
            android:text="@string/settings_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/nav_drawer_menu_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            style="@style/navViewImageItem"
            android:src="@drawable/ic_abouticon" />

        <TextView
            style="@style/navViewTextItem"
            android:text="@string/about" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

</LinearLayout>