<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.blockchain.store.playmarket.ui.about_screen.AboutAppActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="2"
        android:scaleY="2"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/daopmlogo" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />


    <TextView
        android:id="@+id/our_site"
        style="@style/about_text"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/our_site"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/version" />

    <TextView
        android:id="@+id/browser_version"
        style="@style/about_text"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        android:text="@string/browser_version"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/our_site" />

    <TextView
        android:id="@+id/about_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/about_playmarket_2_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/organizational_structure"
        style="@style/about_text"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/organizational_structure"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/about_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/investment_declaration"
        style="@style/about_text"
        android:layout_marginBottom="16dp"
        android:text="@string/investment_declaration"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/organizational_structure"
        app:layout_constraintEnd_toEndOf="@+id/organizational_structure"
        app:layout_constraintStart_toStartOf="@+id/organizational_structure" />

    <TextView
        android:id="@+id/terms_and_conditions"
        style="@style/about_text"
        android:layout_marginBottom="16dp"
        android:text="@string/terms_and_conditions"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/investment_declaration"
        app:layout_constraintEnd_toEndOf="@+id/investment_declaration"
        app:layout_constraintStart_toStartOf="@+id/investment_declaration" />

    <TextView
        android:id="@+id/privacy_policy"
        style="@style/about_text"
        android:layout_marginBottom="16dp"
        android:text="@string/privacy_policy"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/terms_and_conditions"
        app:layout_constraintEnd_toEndOf="@+id/terms_and_conditions"
        app:layout_constraintStart_toStartOf="@+id/terms_and_conditions" />
</android.support.constraint.ConstraintLayout>
